# sync-timestamp-ros

./: CMakeLists.txt  README.md  package.xml
launch/: sync.launch
src/: publisher.cpp  pure_image_receiver.cpp  pure_pose_receiver.cpp  receiver.cpp
